--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="FSh0BvvNBr1pnYeMYP1DKH0TNODIvSbqpCqJ5x7jGN4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Theelitetradeltd.com scam warning. Read reviews about Theelitetradeltd.com. Is Theelitetradeltd.com a scam or legit? Find out the truth here!">
